--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-body">
         <h1 class="card-title text-center">Check Sentence Similarity</h1>
-        <form method="post" action="/compareee">
+        <form method="post" action="/compare">
 
           <div class="mb-3">
             <label for="sent1" class="form-label">Sentence 1:</label>
